- Fix bug causing disabled trackers to be announced in a manual announce
- Add action to menu and toolbar to show or hide the GroupView
- Improved DHT's ability to find peers (205346)
- Make sure file locations are updated before torrent is restarted after data file move
- FileSelectDlg now displays if existing files are found
- Fix very rare crash caused by 0 pointer (206689)

Changes in 3.3beta1:
- Cleanup plugin list (180402)
- If QM enabled, torrents are always managed by the QM, unless user stops them
- QM can now be disabled to allow full manual control of torrents
- Check completed dir for torrent files when opening a torrent (164165)
- Add i18n to scripts, so that they get translated to
- Trackers folder becomes Trackers in tracker_groups.py (183416)
- WebSeeds can now be disabled and enabled individually and globally
- Redesigned GUI with kontact like sidebar to switch between activities
- Added playlist to mediaplayer
- Update size when activities are added or removed (185759)
- Destroy VideoWidget completely when video is closed, to prevent ktorrent from hogging XVideo port (185846)
- Status queued can now result in status strings "Queued for downloading" or "Queued for seeding" (181096)
- Make logviewer widget position configurable
- Added shutdown plugin (182050)
- Add comment to applet desktop file and rename the applet to just KTorrent (183825)
- Added automatic torrent removal script
- The scripting plugin now supports script packages
- Use relative URL's in webinterface (188134)
- Don't send body of login page when redirecting to login page (188209)
- VideoWidget now inhibits screensaver
- Add feature to support a different speed limit when the screensaver is activated (172660)
- Use bytes to calculate availability percentage of a peer (188575)
- Add support for using multiple trackers at the same time for non private torrents (175255)
- Remove config option to select between basic and filesystem specific preallocation method (189784)